--- a/index.html
+++ b/index.html
@@ -98,22 +98,11 @@
       </button>
 
       <div id="info-modal" class="modal">
-        <div class="modal-content">
-          <button id="close-info">&times;</button>
-          <h2>Welcome to CursorFace!</h2>
-          <p>Stumbled here with nothing better to do? Perfect.</p>
-          <p>
-            Here, six quirky characters will silently watch your every move,
-            tracking your cursor with an almost eerie curiosity.
-          </p>
-          <p>
-            Whether you’re procrastinating, taking a break, or just feeling like
-            being observed by pixelated eyes — you’ve found the right place.
-          </p>
-          <p>Sit back, relax, and let the faces follow you around.</p>
+        <div class="modal-content" style="padding: 0; background: transparent; box-shadow: none;">
+          <button id="close-info" style="position:absolute;top:10px;right:15px;z-index:10;font-size:20px;background:none;border:none;color:white;cursor:pointer;">&times;</button>
+          <img src="./startimgs/infoboard.png" alt="Info Board" style="max-width:90vw;max-height:80vh;display:block;border-radius:10px;" />
         </div>
       </div>
-    </div>
 
     <script src="./start.js" defer></script>
   </body>
