--- a/main.html
+++ b/main.html
@@ -205,6 +205,7 @@
         class="logo"
         loading="lazy"
       />
+      <img src="images/bymd.png" alt="Bymd" class="bymd" loading="lazy" />
     </footer>
 
     <script src="script.js" defer></script>
